tests/integration/typechecking/global_variable_error.june
// error: can't find variable

let x = 123

fun foo() {
    println(x)
}

foo()